nvml-wrapper-sys/nvml.h

    typedef struct nvmlDevice_st *nvmlDevice_t;
    /**
 * Represents the type for sample value returned
 */
    typedef enum nvmlValueType_enum
    {
        NVML_VALUE_TYPE_DOUBLE = 0,
        NVML_VALUE_TYPE_UNSIGNED_INT = 1,
        NVML_VALUE_TYPE_UNSIGNED_LONG = 2,
        NVML_VALUE_TYPE_UNSIGNED_LONG_LONG = 3,
        NVML_VALUE_TYPE_SIGNED_LONG_LONG = 4,

        // Keep this last
        NVML_VALUE_TYPE_COUNT
    } nvmlValueType_t;
    /**
 * Union to represent different types of Value
 */
    typedef union nvmlValue_st
    {
        double dVal;               //!< If the value is double
        unsigned int uiVal;        //!< If the value is unsigned int
        unsigned long ulVal;       //!< If the value is unsigned long
        unsigned long long ullVal; //!< If the value is unsigned long long
        signed long long sllVal;   //!< If the value is signed long long
    } nvmlValue_t;
    /** 
 * Return values for NVML API calls. 
 */
    typedef enum nvmlReturn_enum
    {
        // cppcheck-suppress *
        NVML_SUCCESS = 0,                        //!< The operation was successful
        NVML_ERROR_UNINITIALIZED = 1,            //!< NVML was not first initialized with nvmlInit()
        NVML_ERROR_INVALID_ARGUMENT = 2,         //!< A supplied argument is invalid
        NVML_ERROR_NOT_SUPPORTED = 3,            //!< The requested operation is not available on target device
        NVML_ERROR_NO_PERMISSION = 4,            //!< The current user does not have permission for operation
        NVML_ERROR_ALREADY_INITIALIZED = 5,      //!< Deprecated: Multiple initializations are now allowed through ref counting
        NVML_ERROR_NOT_FOUND = 6,                //!< A query to find an object was unsuccessful
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        //!< An input argument is not large enough
        NVML_ERROR_INSUFFICIENT_POWER = 8,       //!< A device's external power cables are not properly attached
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        //!< NVIDIA driver is not loaded
        NVML_ERROR_TIMEOUT = 10,                 //!< User provided timeout passed
        NVML_ERROR_IRQ_ISSUE = 11,               //!< NVIDIA Kernel detected an interrupt issue with a GPU
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       //!< NVML Shared Library couldn't be found or loaded
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      //!< Local version of NVML doesn't implement this function
        NVML_ERROR_CORRUPTED_INFOROM = 14,       //!< infoROM is corrupted
        NVML_ERROR_GPU_IS_LOST = 15,             //!< The GPU has fallen off the bus or has otherwise become inaccessible
        NVML_ERROR_RESET_REQUIRED = 16,          //!< The GPU requires a reset before it can be used again
        NVML_ERROR_OPERATING_SYSTEM = 17,        //!< The GPU control device has been blocked by the operating system/cgroups
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, //!< RM detects a driver/library version mismatch
        NVML_ERROR_IN_USE = 19,                  //!< An operation cannot be performed because the GPU is currently in use
        NVML_ERROR_MEMORY = 20,                  //!< Insufficient memory
        NVML_ERROR_NO_DATA = 21,                 //!< No data
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  //!< The requested vgpu operation is not available on target device, because ECC is enabled
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  //!< Ran out of critical resources, other than memory
        NVML_ERROR_UNKNOWN = 999                 //!< An internal driver error occurred
    } nvmlReturn_t;
    /**
 * Information for a Field Value Sample
 */
    typedef struct nvmlFieldValue_st
    {
        unsigned int fieldId;      //!< ID of the NVML field to retrieve. This must be set before any call that uses this struct. See the constants starting with NVML_FI_ above.
        unsigned int scopeId;      //!< Scope ID can represent data used by NVML depending on fieldId's context. For example, for NVLink throughput counter data, scopeId can represent linkId.
        long long timestamp;       //!< CPU Timestamp of this value in microseconds since 1970
        long long latencyUsec;     //!< How long this field value took to update (in usec) within NVML. This may be averaged across several fields that are serviced by the same driver call.
        nvmlValueType_t valueType; //!< Type of the value stored in value
        nvmlReturn_t nvmlReturn;   //!< Return code for retrieving this value. This must be checked before looking at value, as value is undefined if nvmlReturn != NVML_SUCCESS
        nvmlValue_t value;         //!< Value for this field. This is only valid if nvmlReturn == NVML_SUCCESS
    } nvmlFieldValue_t;
    /** @} */

    /***************************************************************************************************/
    /** @defgroup nvmlUnitStructs Unit Structs
 *  @{
 */
    /***************************************************************************************************/

    typedef struct nvmlUnit_st *nvmlUnit_t;
    /** 
 * Description of HWBC entry 
 */
    typedef struct nvmlHwbcEntry_st
    {
        unsigned int hwbcId;
        char firmwareVersion[32];
    } nvmlHwbcEntry_t;
    /** 
 * Fan state enum. 
 */
    typedef enum nvmlFanState_enum
    {
        NVML_FAN_NORMAL = 0, //!< Fan is working properly
        NVML_FAN_FAILED = 1  //!< Fan has failed
    } nvmlFanState_t;
    /** 
 * Led color enum. 
 */
    typedef enum nvmlLedColor_enum
    {
        NVML_LED_COLOR_GREEN = 0, //!< GREEN, indicates good health
        NVML_LED_COLOR_AMBER = 1  //!< AMBER, indicates problem
    } nvmlLedColor_t;
    /** 
 * LED states for an S-class unit.
 */
    typedef struct nvmlLedState_st
    {
        char cause[256];      //!< If amber, a text description of the cause
        nvmlLedColor_t color; //!< GREEN or AMBER
    } nvmlLedState_t;
    /** 
 * Static S-class unit info.
 */
    typedef struct nvmlUnitInfo_st
    {
        char name[96];            //!< Product name
        char id[96];              //!< Product identifier
        char serial[96];          //!< Product serial number
        char firmwareVersion[96]; //!< Firmware version
    } nvmlUnitInfo_t;
    /** 
 * Power usage information for an S-class unit.
 * The power supply state is a human readable string that equals "Normal" or contains
 * a combination of "Abnormal" plus one or more of the following:
 *    
 *    - High voltage
 *    - Fan failure
 *    - Heatsink temperature
 *    - Current limit
 *    - Voltage below UV alarm threshold
 *    - Low-voltage
 *    - SI2C remote off command
 *    - MOD_DISABLE input
 *    - Short pin transition 
*/
    typedef struct nvmlPSUInfo_st
    {
        char state[256];      //!< The power supply state
        unsigned int current; //!< PSU current (A)
        unsigned int voltage; //!< PSU voltage (V)
        unsigned int power;   //!< PSU power draw (W)
    } nvmlPSUInfo_t;
    /** 
 * Fan speed reading for a single fan in an S-class unit.
 */
    typedef struct nvmlUnitFanInfo_st
    {
        unsigned int speed;   //!< Fan speed (RPM)
        nvmlFanState_t state; //!< Flag that indicates whether fan is working properly
    } nvmlUnitFanInfo_t;
    /** 
 * Fan speed readings for an entire S-class unit.
 */
    typedef struct nvmlUnitFanSpeeds_st
    {
        nvmlUnitFanInfo_t fans[24]; //!< Fan speed data for each fan
        unsigned int count;         //!< Number of fans in unit
    } nvmlUnitFanSpeeds_t;
    /** @} */

    /***************************************************************************************************/
    /** @addtogroup nvmlEvents 
 *  @{
 */
    /***************************************************************************************************/

    /** 
 * Handle to an event set
 */
    typedef struct nvmlEventSet_st *nvmlEventSet_t;
    /** @} */

    /** 
 * Information about occurred event
 */
    typedef struct nvmlEventData_st
    {
        nvmlDevice_t device;            //!< Specific device where the event occurred
        unsigned long long eventType;   //!< Information about what specific event occurred
        unsigned long long eventData;   //!< Stores XID error for the device in the event of nvmlEventTypeXidCriticalError,
                                        //   eventData is 0 for any other event. eventData is set as 999 for unknown xid error.
        unsigned int gpuInstanceId;     //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a GPU
                                        //   instance, stores a valid GPU instance ID. gpuInstanceId is set to 0xFFFFFFFF
                                        //   otherwise.
        unsigned int computeInstanceId; //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a
                                        //   compute instance, stores a valid compute instance ID. computeInstanceId is set to
                                        //   0xFFFFFFFF otherwise.
    } nvmlEventData_t;