nvml-wrapper-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_nvmlFieldValue_st() {
    assert_eq!(::std::mem::size_of::<nvmlFieldValue_st>() , 40usize , concat !
               ( "Size of: " , stringify ! ( nvmlFieldValue_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlFieldValue_st>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlFieldValue_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . fieldId as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( fieldId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . unused as * const
                _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( unused ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . timestamp as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( timestamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . latencyUsec as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( latencyUsec ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . valueType as *
                const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( valueType ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . nvmlReturn as *
                const _ as usize } , 28usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( nvmlReturn ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlFieldValue_st ) ) . value as * const
                _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlFieldValue_st ) ,
                "::" , stringify ! ( value ) ));
}
impl Clone for nvmlFieldValue_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlFieldValue_t = nvmlFieldValue_st;
#[repr(C)]
#[derive(Debug)]
pub struct nvmlUnit_st {
    _unused: [u8; 0],
}
pub type nvmlUnit_t = *mut nvmlUnit_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlHwbcEntry_st {
    pub hwbcId: raw::c_uint,
    pub firmwareVersion: [raw::c_char; 32usize],
}
#[test]
fn bindgen_test_layout_nvmlHwbcEntry_st() {
    assert_eq!(::std::mem::size_of::<nvmlHwbcEntry_st>() , 36usize , concat !
               ( "Size of: " , stringify ! ( nvmlHwbcEntry_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlHwbcEntry_st>() , 4usize , concat !
                ( "Alignment of " , stringify ! ( nvmlHwbcEntry_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlHwbcEntry_st ) ) . hwbcId as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlHwbcEntry_st ) ,
                "::" , stringify ! ( hwbcId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlHwbcEntry_st ) ) . firmwareVersion as
                * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlHwbcEntry_st ) ,
                "::" , stringify ! ( firmwareVersion ) ));
}
impl Clone for nvmlHwbcEntry_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlHwbcEntry_t = nvmlHwbcEntry_st;
pub const nvmlFanState_enum_NVML_FAN_NORMAL: nvmlFanState_enum = 0;
pub const nvmlFanState_enum_NVML_FAN_FAILED: nvmlFanState_enum = 1;
pub type nvmlFanState_enum = raw::c_uint;
pub use self::nvmlFanState_enum as nvmlFanState_t;
pub const nvmlLedColor_enum_NVML_LED_COLOR_GREEN: nvmlLedColor_enum = 0;
pub const nvmlLedColor_enum_NVML_LED_COLOR_AMBER: nvmlLedColor_enum = 1;
pub type nvmlLedColor_enum = raw::c_uint;
pub use self::nvmlLedColor_enum as nvmlLedColor_t;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlLedState_st {
    pub cause: [raw::c_char; 256usize],
    pub color: nvmlLedColor_t,
}
#[test]
fn bindgen_test_layout_nvmlLedState_st() {
    assert_eq!(::std::mem::size_of::<nvmlLedState_st>() , 260usize , concat !
               ( "Size of: " , stringify ! ( nvmlLedState_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlLedState_st>() , 4usize , concat !
                ( "Alignment of " , stringify ! ( nvmlLedState_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlLedState_st ) ) . cause as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlLedState_st ) ,
                "::" , stringify ! ( cause ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlLedState_st ) ) . color as * const _
                as usize } , 256usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlLedState_st ) ,
                "::" , stringify ! ( color ) ));
}
impl Clone for nvmlLedState_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlLedState_t = nvmlLedState_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlUnitInfo_st {
    pub name: [raw::c_char; 96usize],
    pub id: [raw::c_char; 96usize],
    pub serial: [raw::c_char; 96usize],
    pub firmwareVersion: [raw::c_char; 96usize],
}
#[test]
fn bindgen_test_layout_nvmlUnitInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitInfo_st>() , 384usize , concat !
               ( "Size of: " , stringify ! ( nvmlUnitInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUnitInfo_st>() , 1usize , concat !
                ( "Alignment of " , stringify ! ( nvmlUnitInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . name as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( name ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . id as * const _ as
                usize } , 96usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( id ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . serial as * const _
                as usize } , 192usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( serial ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . firmwareVersion as
                * const _ as usize } , 288usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( firmwareVersion ) ));
}
impl Clone for nvmlUnitInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlUnitInfo_t = nvmlUnitInfo_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlPSUInfo_st {
    pub state: [raw::c_char; 256usize],
    pub current: raw::c_uint,
    pub voltage: raw::c_uint,
    pub power: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlPSUInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlPSUInfo_st>() , 268usize , concat ! (
               "Size of: " , stringify ! ( nvmlPSUInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlPSUInfo_st>() , 4usize , concat ! (
                "Alignment of " , stringify ! ( nvmlPSUInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . state as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( state ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . current as * const _
                as usize } , 256usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( current ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . voltage as * const _
                as usize } , 260usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( voltage ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . power as * const _
                as usize } , 264usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( power ) ));
}
impl Clone for nvmlPSUInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlPSUInfo_t = nvmlPSUInfo_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlUnitFanInfo_st {
    pub speed: raw::c_uint,
    pub state: nvmlFanState_t,
}
#[test]
fn bindgen_test_layout_nvmlUnitFanInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitFanInfo_st>() , 8usize , concat !
               ( "Size of: " , stringify ! ( nvmlUnitFanInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUnitFanInfo_st>() , 4usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlUnitFanInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanInfo_st ) ) . speed as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanInfo_st ) ,
                "::" , stringify ! ( speed ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanInfo_st ) ) . state as * const
                _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanInfo_st ) ,
                "::" , stringify ! ( state ) ));
}
impl Clone for nvmlUnitFanInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlUnitFanInfo_t = nvmlUnitFanInfo_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlUnitFanSpeeds_st {
    pub fans: [nvmlUnitFanInfo_t; 24usize],
    pub count: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlUnitFanSpeeds_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitFanSpeeds_st>() , 196usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlUnitFanSpeeds_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlUnitFanSpeeds_st>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlUnitFanSpeeds_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanSpeeds_st ) ) . fans as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanSpeeds_st )
                , "::" , stringify ! ( fans ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanSpeeds_st ) ) . count as *
                const _ as usize } , 192usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanSpeeds_st )
                , "::" , stringify ! ( count ) ));
}
impl Clone for nvmlUnitFanSpeeds_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlUnitFanSpeeds_t = nvmlUnitFanSpeeds_st;
#[repr(C)]
#[derive(Debug)]
pub struct nvmlEventSet_st {
    _unused: [u8; 0],
}
pub type nvmlEventSet_t = *mut nvmlEventSet_st;
#[repr(C)]
#[derive(Debug)]
pub struct nvmlEventData_st {
    pub device: nvmlDevice_t,
    pub eventType: raw::c_ulonglong,
    pub eventData: raw::c_ulonglong,
}
